# docs_app

./: .gitignore  COLLABORATION_ROADMAP.md  CONCURRENCY_SOLUTION.md  LLD_Backend.postman_collection.json  README.md
backend/: .gitignore  CMakeLists.txt  TEST_LOGIN.md  test_login.sh
backend/include/controllers/: AuthController.h  DocumentController.h
backend/include/db/: Database.h
backend/include/models/: Collaborator.h  Document.h  User.h
backend/include/repositories/: CollaboratorRepository.h  DocumentRepository.h  UserRepository.h
backend/include/routes/: routes.h
backend/include/services/: AuthService.h  CollaborationService.h  DocumentService.h
backend/include/utils/: Crypto.h  JWT.h  WebSocketManager.h
backend/src/: main.cpp
backend/src/controllers/: AuthController.cpp  DocumentController.cpp
backend/src/db/: Database.cpp
backend/src/models/: Collaborator.cpp  Document.cpp  User.cpp
backend/src/repositories/: CollaboratorRepository.cpp  DocumentRepository.cpp  UserRepository.cpp
backend/src/routes/: routes.cpp  routes.h
backend/src/services/: AuthService.cpp  CollaborationService.cpp  DocumentService.cpp
backend/src/utils/: Crypto.cpp  JWT.cpp  WebSocketManager.cpp
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: CursorOverlay.jsx  ProtectedRoute.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/pages/: Auth.css  DocumentEditor.css  DocumentEditor.jsx  Documents.css  Documents.jsx  Login.jsx  Register.jsx
frontend/src/services/: api.js  websocket.js
